Fixed item details not showing results in some cases

--- a/docs/css/bootstrapOverwrite.css
+++ b/docs/css/bootstrapOverwrite.css
@@ -96,6 +96,10 @@ footer a:hover {
     font-size: 1.2rem;
 }
 
+.jconfirm-content {
+    height: 100%; /* Fix bottom of jconfrim getting hidden*/
+}
+
 @media
 only screen and (max-width: 575px) {
     /* Force table to not be like tables anymore */
